--- a/index.html
+++ b/index.html
@@ -3,38 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Global Pulse Redesign</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/p5.min.js"></script>
+    <title>Global Pulse | Daily News Posters</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Existing fonts -->
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <div class="poster-container">
-        <div id="canvas-container"></div>
-        
-        <div class="top-blocks">
-            <div class="explanation-block" id="exp-1">
-                Loading global trends and news volume analysis from open source data feeds.
-            </div>
-            <div class="explanation-block" id="exp-2">
-                Geographic intensity mapping based on real-time coverage and regional impact.
-            </div>
-            <div class="explanation-block" id="exp-3">
-                Sentiment and diplomatic tone analysis across major international news outlets.
-            </div>
-        </div>
+    <div class="container">
+        <header>
+            <nav class="nav-links">
+                <a href="about.html" class="nav-link">About the project</a>
+            </nav>
+        </header>
 
-        <div class="middle-content">
-            <h1 class="news-title" id="title-1"></h1>
-            <h1 class="news-title" id="title-2"></h1>
-            <h1 class="news-title" id="title-3"></h1>
-        </div>
+        <main>
+            <section class="hero">
+                <h1>What’s going on in the World</h1>
+                <p>3 most popular title, every day</p>
+            </section>
 
-        <div class="bottom-content">
-            <div class="big-word" id="bottom-word">PULSE</div>
-        </div>
+            <div class="poster-grid" id="poster-grid">
+                <!-- Posters will be loaded here via JS -->
+                
+                <!-- Placeholder for design preview -->
+                <a href="poster.html?date=today" class="poster-item">
+                    <div class="poster-preview">
+                        <div style="width:100%; height:100%; background: radial-gradient(circle at 50% 50%, #ff2d55 0%, transparent 60%), radial-gradient(circle at 30% 70%, #ffb800 0%, transparent 50%); opacity: 0.8;"></div>
+                    </div>
+                    <div class="poster-info">
+                        <span class="poster-date">Today</span>
+                    </div>
+                </a>
+            </div>
+        </main>
     </div>
 
-    <script src="data.js"></script>
-    <script src="sketch.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
