Update design: new fonts (Woodland, Object Sans), layout refinements, and animations
- Switched display font to PP Woodland and accent font to PP Object Sans
- Updated header to fixed position and refined container spacing
- Added fade-in-up animations for hero section and poster grid
- Expanded poster grid with static placeholders for design preview
- Refined poster item hover effects and spacing

--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 <body>
     <div class="container">
         <header>
-            <nav class="nav-links">
-                <a href="about.html" class="nav-link">About the project</a>
-            </nav>
+            <div class="nav-container">
+                <a href="about.html" class="nav-link reveal reveal-1">About the project</a>
+            </div>
         </header>
 
         <main>
             <section class="hero">
-                <h1>What’s going on in the World</h1>
-                <p>3 most popular title, every day</p>
+                <h1 class="reveal reveal-1">What's going on in the World</h1>
+                <p class="reveal reveal-2">3 most popular titles every day</p>
             </section>
 
             <div class="poster-grid" id="poster-grid">
@@ -27,10 +27,83 @@
                 <!-- Placeholder for design preview -->
                 <a href="poster.html?date=today" class="poster-item">
                     <div class="poster-preview">
-                        <div style="width:100%; height:100%; background: radial-gradient(circle at 50% 50%, #ff2d55 0%, transparent 60%), radial-gradient(circle at 30% 70%, #ffb800 0%, transparent 50%); opacity: 0.8;"></div>
+                        <!-- We can use a canvas or an image here -->
+                        <div style="width:100%; height:100%; background: radial-gradient(circle at 50% 50%, #ff2d55 0%, transparent 60%), radial-gradient(circle at 30% 70%, #ffb800 0%, transparent 50%); opacity: 0.6;"></div>
                     </div>
                     <div class="poster-info">
                         <span class="poster-date">Today</span>
+                    </div>
+                </a>
+
+                <a href="#" class="poster-item">
+                    <div class="poster-preview">
+                        <div style="width:100%; height:100%; background: radial-gradient(circle at 40% 40%, #34c759 0%, transparent 60%), radial-gradient(circle at 60% 60%, #5ac8fa 0%, transparent 50%); opacity: 0.6;"></div>
+                    </div>
+                    <div class="poster-info">
+                        <span class="poster-date">Yesterday</span>
+                    </div>
+                </a>
+
+                <a href="#" class="poster-item">
+                    <div class="poster-preview">
+                        <div style="width:100%; height:100%; background: radial-gradient(circle at 70% 30%, #ff6b35 0%, transparent 60%); opacity: 0.6;"></div>
+                    </div>
+                    <div class="poster-info">
+                        <span class="poster-date">28 Jan</span>
+                    </div>
+                </a>
+
+                <a href="#" class="poster-item">
+                    <div class="poster-preview">
+                        <div style="width:100%; height:100%; background: radial-gradient(circle at 20% 20%, #ff2d55 0%, transparent 60%); opacity: 0.6;"></div>
+                    </div>
+                    <div class="poster-info">
+                        <span class="poster-date">27 Jan</span>
+                    </div>
+                </a>
+
+                <a href="#" class="poster-item">
+                    <div class="poster-preview">
+                        <div style="width:100%; height:100%; background: radial-gradient(circle at 50% 50%, #5856d6 0%, transparent 60%); opacity: 0.6;"></div>
+                    </div>
+                    <div class="poster-info">
+                        <span class="poster-date">26 Jan</span>
+                    </div>
+                </a>
+
+                <a href="#" class="poster-item">
+                    <div class="poster-preview">
+                        <div style="width:100%; height:100%; background: radial-gradient(circle at 30% 30%, #af52de 0%, transparent 60%); opacity: 0.6;"></div>
+                    </div>
+                    <div class="poster-info">
+                        <span class="poster-date">25 Jan</span>
+                    </div>
+                </a>
+
+                <a href="#" class="poster-item">
+                    <div class="poster-preview">
+                        <div style="width:100%; height:100%; background: radial-gradient(circle at 60% 40%, #ff9500 0%, transparent 60%); opacity: 0.6;"></div>
+                    </div>
+                    <div class="poster-info">
+                        <span class="poster-date">24 Jan</span>
+                    </div>
+                </a>
+
+                <a href="#" class="poster-item">
+                    <div class="poster-preview">
+                        <div style="width:100%; height:100%; background: radial-gradient(circle at 40% 60%, #007aff 0%, transparent 60%); opacity: 0.6;"></div>
+                    </div>
+                    <div class="poster-info">
+                        <span class="poster-date">23 Jan</span>
+                    </div>
+                </a>
+
+                <a href="#" class="poster-item">
+                    <div class="poster-preview">
+                        <div style="width:100%; height:100%; background: radial-gradient(circle at 50% 50%, #ff3b30 0%, transparent 60%); opacity: 0.6;"></div>
+                    </div>
+                    <div class="poster-info">
+                        <span class="poster-date">22 Jan</span>
                     </div>
                 </a>
             </div>
