Update design and content for About and Home pages
- Redesigned about.html with scroll animations and new layout
- Updated hero section text on index.html
- Added new color variables to main.css

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
         <main>
             <section class="hero">
-                <h1 class="reveal reveal-1">What's going on in the World</h1>
-                <p class="reveal reveal-2">3 most popular titles every day</p>
+                <h1 class="reveal reveal-1">What's going on in the world</h1>
+                <p class="reveal reveal-2">The 3 most trending stories, daily</p>
             </section>
 
             <div class="poster-grid" id="poster-grid">
