Update home link to use root path
Changed the "Back to home" link in about.html from index.html to / for a cleaner URL.

--- a/about.html
+++ b/about.html
@@ -102,7 +102,7 @@
 <body>
     <header>
         <div class="nav-container">
-            <a href="index.html" class="nav-link">Back to home</a>
+            <a href="/" class="nav-link">Back to home</a>
         </div>
     </header>
 
