Update home link in poster.html to use root path
Changed the "Back to home" link in poster.html from index.html to / for consistency.

--- a/poster.html
+++ b/poster.html
@@ -10,7 +10,7 @@
 <body>
     <header class="reveal reveal-1">
         <div class="nav-container">
-            <a href="index.html" class="nav-link">Back to home</a>
+            <a href="/" class="nav-link">Back to home</a>
         </div>
     </header>
 
