Update "we" to "I" in process description
Changed the wording in about.html to reflect personal project status.

--- a/about.html
+++ b/about.html
@@ -125,7 +125,7 @@
 
             <div class="about-section align-right">
                 <h2>The Process</h2>
-                <p>Each poster is fully automated, including the design. We use open data sources and libraries to generate a unique pattern every day. The larger the circle, the more significant the news</p>
+                <p>Each poster is fully automated, including the design. I use open data sources and libraries to generate a unique pattern every day. The larger the circle, the more significant the news</p>
             </div>
 
             <div class="about-section">
